--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+/* App.css */
+
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+.center {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+/*
 .App {
   text-align: center;
 }
@@ -36,3 +52,4 @@
     transform: rotate(360deg);
   }
 }
+*/
